CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(PROJECT_NAME unittest)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

PROJECT(${PROJECT_NAME})

ADD_EXECUTABLE(${PROJECT_NAME} utilities.cpp container.cpp threads.cpp network.cpp)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ../utilities)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ../container)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ../threads)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ../network)

ADD_DEPENDENCIES(${PROJECT_NAME} network)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC network)

IF(USE_UNIT_TEST)
    FIND_PACKAGE(GTest CONFIG REQUIRED)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE GTest::gtest GTest::gtest_main)
ENDIF()